import org.gradle.api.internal.artifacts.publish.DefaultPublishArtifact

apply plugin: 'maven'
apply plugin: 'java'

//version = "1.0.1"
distsDirName="dist"
libsDirName="."
archivesBaseName="CoadunationLib"
sourceCompatibility=1.8
targetCompatibility=1.8


configurations {
    compile
    testCompile
}

dependencies {
    compile(ivyDependencies('compile'))
    compile project(':libs:CoadunationBase')
    compile project(':libs:CoadunationAnnotations')
    compile project(':libs:CoadunationClient')
    compile project(':libs:CoadunationSecurity')
    compile project(':libs:CoadunationCommon')
    testCompile group: 'junit', name: 'junit', version: '3.8.2', ext: 'jar'
    testCompile group: 'com.sun.jndi', name: 'providerutil', version: '1.2-Local', ext: 'jar'
    testCompile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21', ext: 'jar'
    testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.21', ext: 'jar'
    testCompile group: 'com.experlog', name: 'xapool', version: '1.6-beta', ext: 'jar'
    testCompile group: 'xstream', name: 'xstream', version: '1.1.3', ext: 'jar'
    testCompile group: 'axis', name: 'axis-saaj', version: '1.4', ext: 'jar'
    testCompile group: 'axis', name: 'axis-jaxrpc', version: '1.4', ext: 'jar'
    testCompile group: 'javax.transaction', name: 'jta', version: '1.1'
    testCompile group: 'javax.resource', name: 'connector-api', version: '1.5', ext: 'jar'
    testCompile group: 'com.sun.jndi', name: 'cosnaming', version: '1.2.1-Local', ext: 'jar'
    testCompile group: 'howl', name: 'howl-logger', version: '0.1.11', ext: 'jar'
    testCompile group: 'org.hsqldb', name: 'hsqldb', version: '2.4.0', ext: 'jar'
    testCompile group: 'org.apache.httpcomponents', name: 'httpcore-nio', version: '4.1-beta2', ext: 'jar'
    testCompile group: 'org.objectweb.carol', name: 'carol', version: '2.2.10', ext: 'jar'
    testCompile group: 'org.objectweb.carol', name: 'carol-iiop-delegate', version: '2.2.10', ext: 'jar'
    testCompile group: 'jts', name: 'jts', version: '1.0', ext: 'jar'
    testCompile group: 'commons-cli', name: 'commons-cli', version: '1.0', ext: 'jar'
    testCompile group: 'commons-collections', name: 'commons-collections', version: '3.2.1', ext: 'jar'
    testCompile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.2.2', ext: 'jar'
    testCompile group: 'commons-discovery', name: 'commons-discovery', version: '0.2', ext: 'jar'
    testCompile group: 'commons-logging', name: 'commons-logging', version: '1.0.4', ext: 'jar'
    testCompile group: 'commons-pool', name: 'commons-pool', version: '1.3', ext: 'jar'
    
    

}

sourceSets {
    main {
        java {
            srcDir './src'
        }
        resources {
            srcDir './src'
        }
    }
    test {
        java {
            srcDir './src'
            srcDir './test'
        }
        resources {
            srcDir './src'
            srcDir './test'
        }
    }
}

uploadArchives {
    repositories.mavenDeployer {
        repository(url: "file://localhost/$projectDir/../../repository")
        pom.version = version
        pom.artifactId = archivesBaseName
        pom.groupId = archivesBaseName
    }

}

jar {
    manifest {
        attributes   "Implementation-Version" : version
    }
}

test {
    forkEvery 1
    jvmArgs '-Xms128m', '-Xmx512m', '-XX:MaxPermSize=128m', '-Dtest.jar=./../TestCoadunationLib/dist/TestCoadunationLib.jar', '-Dtest.tmp.dir=./tmp', '-Dcoad.config=com.rift.coad.lib.configuration.xml.XMLConfigurationFactory', '-Dxml.config.path=./testconfig.xml', '-Dtest.dir=./test', '-Ddist.jar=./build/CoadunationLib-1.0.1.jar', '-Dbuild.dir="./build"'
    ignoreFailures true
}

build.dependsOn {
    [jar, uploadArchives, javadoc]
}
release.dependsOn build

def ivyDependencies(conf) {
        def dep = []

        def ivyModule = new XmlParser().parse(file("${projectDir}/ivy.xml"))

        ivyModule.dependencies.dependency.each {
                if(it.@conf == null || it.@conf == conf)
                        dep.add(it.@org + ':' + it.@name + ':' + it.@rev + ':@jar')
        }

        return dep
}

